[package]
name = "code-runner"
version = "1.4.1"
authors = ["Arjun Komath <arjunkomath@gmail.com>", "Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
